Fixed issue causing wrong height values for 3d scenario

--- a/src/styles.css
+++ b/src/styles.css
@@ -131,6 +131,13 @@ input[type="checkbox"] {
   }
 }
 
+#scenario{
+  position: absolute; 
+  height: calc(100vh - 50px);
+  width: 100%;
+  top: 50px;
+  left: 0;
+}
 
 ul {
   position: absolute;
